--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a discord bot that tells you the time",
   "main": "beatnik.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node beatnik",
+    "debug": "node beatnik --inspect"
   },
   "repository": {
     "type": "git",
