--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "opusscript": "0.0.7",
     "prettier": "^2.2.1",
-    "ytdl-core": "^4.4.5"
+    "ytdl-core": "^4.4.5",
+    "ytpl": "^2.0.5"
   }
 }
