--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "prettier": "^2.2.1",
     "ytdl-core": "^4.4.5",
     "ytpl": "^2.0.5"
+  },
+  "devDependencies": {
+    "eslint": "^7.20.0"
   }
 }
