--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/vphoebe/beatnik#readme",
   "dependencies": {
     "@discordjs/opus": "^0.4.0",
+    "discord-youtube-api": "^0.1.0",
     "discord.js": "^12.5.1",
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.2.7",
