--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "discord-youtube-api": "^0.1.0",
     "discord.js": "^12.5.1",
     "ffmpeg-static": "^4.2.7",
+    "get-random-values": "^1.2.2",
     "opusscript": "0.0.7",
     "typescript": "^4.2.2",
     "ytdl-core": "^4.5.0",
