--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "a discord bot that tells you the time, among other things.",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node index",
-    "debug": "ts-node-dev index --inspect",
+    "start": "nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts",
     "build": "npx tsc --build",
     "clean": "npx tsc --build --clean",
     "deploy": "pm2 deploy production --force"
@@ -37,6 +36,7 @@
   "devDependencies": {
     "@types/node": "^14.14.31",
     "eslint": "^7.20.0",
+    "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.6"
