--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "discord.js": "^12.5.1",
     "ffmpeg-static": "^4.2.7",
     "get-random-values": "^1.2.2",
+    "soundcloud-downloader": "^1.0.0",
     "ytdl-core": "^4.5.0",
     "ytpl": "^2.0.5"
   },
