--- a/.dockerignore
+++ b/.dockerignore
@@ -4,7 +4,7 @@ logs
 npm-debug.log*
 
 # Dependency directories
-node_modules/
+node_modules
 
 # ignore custom configs
 */config/shortcuts.json
@@ -14,3 +14,6 @@ build
 
 # environment files
 .env
+
+# git
+.git
