--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts",
-    "build": "npx tsc --build --clean && npx tsc --build",
-    "deploy": "pm2 deploy production --force"
+    "build": "npx tsc --build --clean && npx tsc --build"
   },
   "repository": {
     "type": "git",
@@ -26,7 +25,7 @@
     "discord-youtube-api": "^0.1.0",
     "discord-ytdl-core": "^5.0.3",
     "discord.js": "^12.5.3",
-    "ffmpeg-static": "^4.3.0",
+    "dotenv": "^10.0.0",
     "get-random-values": "^1.2.2",
     "soundcloud-downloader": "^1.0.0",
     "ytdl-core": "^4.8.0",
