--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   "dependencies": {
     "@discordjs/opus": "^0.5.0",
     "discord-youtube-api": "^0.1.0",
-    "discord-ytdl-core": "^5.0.3",
     "discord.js": "^12.5.3",
     "get-random-values": "^1.2.2",
     "soundcloud-downloader": "^1.0.0",
-    "ytdl-core": "^4.8.0",
+    "ytdl-core": "^4.8.2",
+    "ytdl-core-discord": "^1.3.0",
     "ytpl": "^2.2.1"
   },
   "devDependencies": {
