--- a/config.json.sample
+++ b/config.json.sample
@@ -5,9 +5,9 @@
   "default_volume": "0.3",
   "shortcuts": [
     {
-      "shortcut": "",
-      "command": "",
-      "description": ""
+      "shortcut": "New command to run this shortcut",
+      "command": "existing command that will be run (don't include prefix)",
+      "description": "Description that will show up in the help command."
     }
   ]
 }
