--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -22,4 +22,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: docker.pkg.github.com/${{ github.repository }}/beatnik:${{ github.ref }}
+          tags: docker.pkg.github.com/${{ github.repository }}/beatnik:latest
