--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.ts",
   "scripts": {
     "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts",
-    "build": "npx tsc --build --clean && npx tsc --build"
+    "build": "npx tsc --build --clean && npx tsc --build",
+    "postinstall": "patch-package"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "discord-youtube-api": "^0.1.0",
     "discord.js": "^12.5.3",
     "get-random-values": "^1.2.2",
+    "patch-package": "^6.4.7",
     "soundcloud-downloader": "^1.0.0",
     "ytdl-core": "^4.8.2",
     "ytdl-core-discord": "^1.3.0",
