--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "beatnik",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "a discord bot that tells you the time, among other things.",
   "main": "src/index.ts",
   "scripts": {
     "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts",
-    "build": "npx tsc --build --clean && npx tsc --build",
-    "postinstall": "patch-package"
+    "build": "npx tsc --build --clean && npx tsc --build"
   },
   "repository": {
     "type": "git",
@@ -26,9 +25,8 @@
     "discord-youtube-api": "^0.1.0",
     "discord.js": "^12.5.3",
     "get-random-values": "^1.2.2",
-    "patch-package": "^6.4.7",
     "soundcloud-downloader": "^1.0.0",
-    "ytdl-core": "^4.8.2",
+    "ytdl-core": "^4.8.3",
     "ytdl-core-discord": "^1.3.0",
     "ytpl": "^2.2.1"
   },
@@ -38,7 +36,7 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
     "ts-node": "^9.1.1",
-    "ts-node-dev": "^1.1.6",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.2.4"
   }
 }
