--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "homepage": "https://github.com/vphoebe/beatnik#readme",
   "dependencies": {
     "@discordjs/opus": "^0.5.0",
+    "@prisma/client": "^2.26.0",
     "discord-youtube-api": "^0.1.0",
     "discord.js": "^12.5.3",
     "get-random-values": "^1.2.2",
     "soundcloud-downloader": "^1.0.0",
+    "sqlite3": "^5.0.2",
     "ytdl-core": "^4.8.3",
     "ytdl-core-discord": "^1.3.0",
     "ytpl": "^2.2.1"
@@ -35,6 +37,7 @@
     "eslint": "^7.26.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
+    "prisma": "^2.26.0",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.2.4"
