--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "beatnik",
-  "version": "1.0.5",
+  "version": "2.0.0",
   "description": "a discord bot that tells you the time, among other things.",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts",
+    "dev": "DATABASE_URL='file:./dev.db' nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts",
     "build": "npx tsc --build --clean && npx tsc --build"
   },
   "repository": {
@@ -28,7 +28,7 @@
     "get-random-values": "^1.2.2",
     "soundcloud-downloader": "^1.0.0",
     "sqlite3": "^5.0.2",
-    "ytdl-core": "^4.8.3",
+    "ytdl-core": "^4.9.1",
     "ytdl-core-discord": "^1.3.0",
     "ytpl": "^2.2.1"
   },
