--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts",
-    "build": "npx tsc --build --clean && npx tsc --build",
+    "build": "npx prisma generate && npx tsc --build --clean && npx tsc --build",
     "db": "prisma migrate deploy"
   },
   "repository": {
@@ -23,10 +23,11 @@
   "homepage": "https://github.com/vphoebe/beatnik#readme",
   "dependencies": {
     "@discordjs/opus": "^0.5.0",
-    "@prisma/client": "^2.26.0",
+    "@prisma/client": "^2.30.0",
     "discord-youtube-api": "^0.1.0",
     "discord.js": "^12.5.3",
     "get-random-values": "^1.2.2",
+    "prisma": "^2.30.0",
     "soundcloud-downloader": "^1.0.0",
     "ytdl-core": "^4.9.1",
     "ytdl-core-discord": "^1.3.0",
@@ -37,7 +38,6 @@
     "eslint": "^7.26.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
-    "prisma": "^2.26.0",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.2.4"
