--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,2 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-
-# Dependency directories
 node_modules/
-
-# ignore custom configs
-config.json
-
-# ts build dir
-build
-
-# environment files
-.env
-
-# local dbs
-prisma/**/*.db*
+.env*
