--- a/package.json
+++ b/package.json
@@ -1,45 +1,37 @@
 {
   "name": "beatnik",
-  "version": "2.1.0",
-  "description": "a discord bot that tells you the time, among other things.",
-  "main": "src/index.ts",
+  "version": "3.0.0",
+  "description": "next-generation beatnik",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts",
-    "build": "npx prisma generate && npx tsc --build --clean && npx tsc --build",
-    "db": "prisma migrate deploy"
+    "start": "ts-node-dev src/index.ts",
+    "deploy:global": "ts-node src/deploy-global-commands.ts"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vphoebe/beatnik.git"
-  },
-  "authors": [
-    "vphoebe",
-    "bees"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/vphoebe/beatnik/issues"
-  },
-  "homepage": "https://github.com/vphoebe/beatnik#readme",
-  "dependencies": {
-    "@discordjs/opus": "^0.5.0",
-    "@prisma/client": "^2.30.0",
-    "discord-youtube-api": "^0.1.0",
-    "discord.js": "^12.5.3",
-    "get-random-values": "^1.2.2",
-    "prisma": "^2.30.0",
-    "soundcloud-downloader": "^1.0.0",
-    "ytdl-core": "^4.9.1",
-    "ytdl-core-discord": "^1.3.0",
-    "ytpl": "^2.2.1"
-  },
+  "author": "vphoebe",
+  "license": "UNLICENSED",
   "devDependencies": {
-    "@types/node": "^15.3.1",
-    "eslint": "^7.26.0",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.3.0",
-    "ts-node": "^9.1.1",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.2.4"
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "@types/node": "^17.0.34",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.15.0",
+    "prettier": "2.6.2",
+    "ts-node": "^10.7.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "@discordjs/builders": "^0.15.0",
+    "@discordjs/opus": "^0.7.0",
+    "@discordjs/rest": "^0.5.0",
+    "@discordjs/voice": "^0.10.0",
+    "discord-api-types": "^0.33.5",
+    "discord.js": "^13.8.0",
+    "dotenv": "^16.0.1",
+    "sodium": "^3.0.2",
+    "youtube-search-without-api-key": "^1.0.7",
+    "ytdl-core": "^4.11.0",
+    "ytdl-core-discord": "^1.3.1",
+    "ytpl": "^2.3.0"
   }
 }
