--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "discord-api-types": "^0.33.5",
     "discord.js": "^13.8.0",
     "dotenv": "^16.0.1",
+    "sequelize": "^6.20.1",
     "sodium": "^3.0.2",
+    "sqlite3": "^5.0.8",
     "youtube-search-without-api-key": "^1.0.7",
     "ytdl-core": "^4.11.0",
     "ytdl-core-discord": "^1.3.1",
