--- a/package.json
+++ b/package.json
@@ -6,21 +6,10 @@
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
     "build": "tsc --build --clean && tsc --build",
-    "deploy:global": "ts-node src/deploy-global-commands.ts"
+    "dev:deployglobal": "ts-node src/deploy-global-commands.ts"
   },
   "author": "vphoebe",
-  "license": "UNLICENSED",
-  "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "@types/node": "^17.0.34",
-    "@typescript-eslint/eslint-plugin": "^5.25.0",
-    "@typescript-eslint/parser": "^5.25.0",
-    "eslint": "^8.15.0",
-    "prettier": "2.6.2",
-    "ts-node": "^10.7.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.6.4"
-  },
+  "license": "MIT",
   "dependencies": {
     "@discordjs/builders": "^0.15.0",
     "@discordjs/opus": "^0.7.0",
@@ -36,5 +25,16 @@
     "ytdl-core": "^4.11.0",
     "ytdl-core-discord": "^1.3.1",
     "ytpl": "^2.3.0"
+  },
+  "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "@types/node": "^17.0.34",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.15.0",
+    "prettier": "2.6.2",
+    "ts-node": "^10.7.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.6.4"
   }
 }
