--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "@discordjs/opus": "^0.7.0",
     "@discordjs/rest": "^0.5.0",
     "@discordjs/voice": "^0.10.0",
+    "@keyv/sqlite": "^3.5.2",
     "discord-api-types": "^0.33.5",
     "discord.js": "^13.8.0",
     "dotenv": "^16.0.1",
+    "keyv": "^4.3.0",
     "libsodium-wrappers": "^0.7.10",
-    "sequelize": "^6.20.1",
-    "sqlite3": "^5.0.8",
     "youtube-search-without-api-key": "^1.0.7",
     "ytdl-core": "^4.11.0",
     "ytdl-core-discord": "^1.3.1",
