--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.1",
     "keyv": "^4.3.0",
     "libsodium-wrappers": "^0.7.10",
+    "sqlite3": "^5.0.8",
     "youtube-search-without-api-key": "^1.0.7",
     "ytdl-core": "^4.11.0",
     "ytdl-core-discord": "^1.3.1",
