--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "discord.js": "^13.8.0",
     "dotenv": "^16.0.1",
     "keyv": "^4.3.0",
-    "libsodium-wrappers": "^0.7.10",
+    "sodium-native": "^3.3.0",
     "sqlite3": "^5.0.8",
     "youtube-search-without-api-key": "^1.0.7",
     "ytdl-core": "^4.11.0",
