--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "beatnik",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "description": "modern and simple Discord music bot with easy-to-use commands",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "build": "tsc --build --clean && tsc --build",
     "dev:deployglobal": "ts-node src/deploy-global-commands.ts",
+    "build": "tsc --build --clean && tsc --build",
     "build:docker": "npm run build && docker build -t beatnik-dev .",
+    "build:dockerx64": "npm run build && docker buildx build --platform linux/amd64 -t beatnik-dev-x64 .",
     "start": "pm2-runtime ecosystem.config.js"
   },
   "author": "vphoebe",
