--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "beatnik",
   "version": "3.1.4",
   "description": "modern and simple Discord music bot with easy-to-use commands",
+  "type": "module",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
     "dev:deployglobal": "ts-node src/deploy-global-commands.ts",
@@ -35,6 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "eslint": "^8.15.0",
+    "eslint-plugin-require-extensions": "^0.1.3",
     "prettier": "2.6.2",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^2.0.0",
