--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
     "lib": ["ES2022"],
-    "module": "CommonJS",
+    "module": "ES2022",
+    "moduleResolution": "node",
     "target": "ES2022",
     "strict": true,
     "esModuleInterop": true,
