--- a/.github/workflows/publish-package-dev.yml
+++ b/.github/workflows/publish-package-dev.yml
@@ -1,4 +1,4 @@
-name: Publish Docker image
+name: Publish Docker image (dev)
 on:
   push:
     branches:
@@ -6,12 +6,9 @@ on:
 
 jobs:
   push_to_registry:
-    name: Push Docker image to Docker Hub
+    name: (dev) Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
