--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "dev:deployglobal": "ts-node src/deploy-global-commands.ts",
-    "build": "tsc --build --clean && tsc --build",
+    "build": "esbuild src/index.ts src/deploy-global-commands.ts --outdir=build --platform=node --target=node18 --bundle --packages=external --out-extension:.js=.cjs --minify",
     "typecheck": "tsc --noEmit",
     "build:docker": "pnpm build && docker build -t beatnik-dev .",
     "build:dockerx64": "pnpm build && docker buildx build --platform linux/amd64 -t beatnik-dev-x64 .",
@@ -35,6 +35,7 @@
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
+    "esbuild": "^0.17.18",
     "eslint": "^8.15.0",
     "eslint-plugin-require-extensions": "^0.1.3",
     "nodemon": "^2.0.22",
