--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "modern and simple Discord music bot with easy-to-use commands",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon src/beatnik.ts",
     "dev:deployglobal": "ts-node src/deploy-global-commands.ts",
-    "build": "esbuild src/index.ts src/deploy-global-commands.ts --outdir=build --platform=node --target=node18 --bundle --packages=external --out-extension:.js=.cjs --minify",
+    "build": "esbuild src/beatnik.ts src/deploy-global-commands.ts --outdir=build --platform=node --target=node18 --bundle --packages=external --out-extension:.js=.cjs --minify",
     "typecheck": "tsc --noEmit",
     "build:docker": "pnpm build && docker build -t beatnik-dev .",
     "build:dockerx64": "pnpm build && docker buildx build --platform linux/amd64 -t beatnik-dev-x64 .",
