--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "beatnik",
-  "version": "3.1.4",
+  "version": "3.2.0",
   "description": "modern and simple Discord music bot with easy-to-use commands",
   "type": "module",
   "scripts": {
     "dev": "nodemon src/beatnik.ts",
-    "dev:deployglobal": "ts-node src/deploy-global-commands.ts",
+    "dev:deploy": "nodemon src/deploy-global-commands.ts",
     "build": "esbuild src/beatnik.ts src/deploy-global-commands.ts --outdir=build --platform=node --target=node18 --bundle --packages=external --out-extension:.js=.cjs --minify",
     "typecheck": "tsc --noEmit",
     "build:docker": "pnpm build && docker build -t beatnik-dev .",
@@ -40,7 +40,6 @@
     "eslint-plugin-require-extensions": "^0.1.3",
     "nodemon": "^2.0.22",
     "prettier": "2.6.2",
-    "ts-node": "^10.9.1",
     "typescript": "^4.6.4"
   },
   "engines": {
