--- a/.github/workflows/publish-package-dev.yml
+++ b/.github/workflows/publish-package-dev.yml
@@ -9,6 +9,11 @@ jobs:
     name: (dev) Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: "arm64"
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -21,5 +26,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
+          context: .
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: nickseman/beatnik:dev
