--- a/.github/workflows/publish-package-dev.yml
+++ b/.github/workflows/publish-package-dev.yml
@@ -9,6 +9,9 @@ jobs:
     name: (dev) Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
         with:
