--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-require-extensions": "^0.1.3",
     "nodemon": "^2.0.22",
     "prettier": "2.6.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.6.4"
   },
   "engines": {
