--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.0",
+    "@distube/ytdl-core": "^4.13.2",
     "@keyv/sqlite": "^3.5.2",
     "discord.js": "^14.12.1",
     "dotenv": "^16.0.1",
@@ -25,7 +26,6 @@
     "sodium-native": "^3.3.0",
     "sqlite3": "^5.1.5",
     "youtube-search-without-api-key": "^1.0.7",
-    "ytdl-core": "git+ssh://git@github.com:khlevon/node-ytdl-core.git#v4.11.4-patch.2",
     "ytpl": "^2.3.0"
   },
   "devDependencies": {
