--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev:deploy": "nodemon src/deploy-global-commands.ts",
     "format": "prettier --write .",
     "deploy": "node build/deploy-global-commands.cjs",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "start": "pnpm build && node build/deploy-global-commands.cjs && nodemon build/beatnik.cjs"
   },
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
