--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "beatnik",
-  "version": "3.6.1",
+  "version": "3.6.2",
   "description": "modern and simple Discord music bot with easy-to-use commands",
   "author": "vphoebe",
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "esbuild src/beatnik.ts src/deploy-global-commands.ts --outdir=build --platform=node --target=node18 --bundle --packages=external --out-extension:.js=.cjs --minify",
-    "build:docker": "pnpm build && docker build -t beatnik-dev .",
-    "build:dockerx64": "pnpm build && docker buildx build --platform linux/amd64 -t beatnik-dev-x64 .",
+    "build": "esbuild src/beatnik.ts src/deploy-global-commands.ts --outdir=build --platform=node --target=node20 --bundle --packages=external --out-extension:.js=.cjs --minify",
+    "build:docker": "npm run build && docker build -t beatnik-dev .",
+    "build:dockerx64": "npm run build && docker buildx build --platform linux/amd64 -t beatnik-dev-x64 .",
     "dev": "tsx watch src/beatnik.ts",
-    "dev:deploy": "nodemon src/deploy-global-commands.ts",
+    "dev:commands": "nodemon src/deploy-global-commands.ts",
     "format": "prettier --write .",
-    "deploy": "node build/deploy-global-commands.cjs",
+    "commands": "node build/deploy-global-commands.cjs",
     "typecheck": "tsc --noEmit",
-    "start": "pnpm build && node build/deploy-global-commands.cjs && nodemon build/beatnik.cjs"
+    "start": "npm run build && node build/deploy-global-commands.cjs && nodemon build/beatnik.cjs",
+    "deploy": "fly deploy"
   },
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
@@ -31,8 +32,7 @@
     "sqlite3": "^5.1.5"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "@types/cloneable-readable": "^2.0.3",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
@@ -44,7 +44,7 @@
     "typescript": "^5.1.6"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   },
   "prettier": {
     "semi": true
