--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beatnik",
-  "version": "3.6.2",
+  "version": "3.6.3",
   "description": "modern and simple Discord music bot with easy-to-use commands",
   "author": "vphoebe",
   "license": "MIT",
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
-    "@discordjs/voice": "^0.16.1",
+    "@discordjs/voice": "^0.17.0",
     "@distube/ytdl-core": "^4.13.4",
     "@distube/ytpl": "^1.2.1",
     "@distube/ytsr": "^2.0.4",
@@ -27,19 +27,18 @@
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "keyv": "^4.5.4",
-    "play-dl": "^1.9.7",
-    "sodium-native": "^3.4.1",
+    "sodium-native": "^4.1.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/node": "^18.19.38",
+    "@types/node": "^20.14.7",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "esbuild": "^0.17.19",
     "eslint": "^8.57.0",
     "eslint-plugin-require-extensions": "^0.1.3",
-    "prettier": "2.6.2",
+    "prettier": "^3.3.2",
     "tsx": "^4.15.6",
     "typescript": "^5.5.2"
   },
