--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beatnik",
-  "version": "3.6.4",
+  "version": "4.0.0",
   "description": "modern and simple Discord music bot with easy-to-use commands",
   "author": "vphoebe",
   "license": "MIT",
@@ -24,6 +24,7 @@
     "@distube/ytpl": "^1.2.1",
     "@distube/ytsr": "^2.0.4",
     "@keyv/sqlite": "^3.6.7",
+    "@prisma/client": "^5.16.1",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "keyv": "^4.5.4",
@@ -39,6 +40,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-require-extensions": "^0.1.3",
     "prettier": "^3.3.2",
+    "prisma": "^5.16.1",
     "tsx": "^4.15.6",
     "typescript": "^5.5.2"
   },
