--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "commands": "node build/deploy-global-commands.cjs",
     "typecheck": "tsc --noEmit",
     "start": "npm run build && node build/deploy-global-commands.cjs && nodemon build/beatnik.cjs",
-    "deploy": "fly deploy"
+    "deploy": "fly deploy",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:migratedeploy": "prisma migrate deploy"
   },
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
