--- a/package.json
+++ b/package.json
@@ -51,6 +51,15 @@
     "node": ">=20"
   },
   "prettier": {
-    "semi": true
+    "semi": true,
+    "printWidth": 100,
+    "plugins": [
+      "@trivago/prettier-plugin-sort-imports"
+    ],
+    "importOrder": [
+      "<THIRD_PARTY_MODULES>",
+      "^[./]"
+    ],
+    "importOrderSeparation": true
   }
 }
