--- a/.github/workflows/publish-package-release.yml
+++ b/.github/workflows/publish-package-release.yml
@@ -5,11 +5,14 @@ on:
 
 jobs:
   push_to_registry:
-    name: (release) Push Docker image to Docker Hub
+    name: (next) Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -18,7 +21,9 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           push: true
           tags: nickseman/beatnik:latest
+          cache-from: type=registry,ref=nickseman/beatnik:buildcache
+          cache-to: type=registry,ref=nickseman/beatnik:buildcache,mode=max
