--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beatnik",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "description": "modern and simple Discord music bot with easy-to-use commands",
   "author": "vphoebe",
   "license": "MIT",
@@ -20,8 +20,8 @@
   },
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
-    "@discordjs/voice": "^0.17.0",
-    "@distube/ytdl-core": "^4.14.4",
+    "@discordjs/voice": "^0.18.0",
+    "@distube/ytdl-core": "4.15.8",
     "@distube/ytpl": "^1.2.1",
     "@distube/ytsr": "^2.0.4",
     "@keyv/sqlite": "^3.6.7",
@@ -46,7 +46,7 @@
     "typescript": "^5.5.2"
   },
   "engines": {
-    "node": ">=20"
+    "node": ">=22"
   },
   "prettier": {
     "semi": true,
