--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,11 +1,12 @@
 {
   "semi": true,
   "printWidth": 100,
-  "plugins": [
-    "@trivago/prettier-plugin-sort-imports"
-  ],
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "importOrder": [
     "<THIRD_PARTY_MODULES>",
+    "^lib/(.*)$",
+    "^commands/(.*)$",
+    "^generated/(.*)$",
     "^[./]"
   ],
   "importOrderSeparation": true
