--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "preinstall": "npx only-allow npm",
-    "build": "esbuild src/beatnik.ts src/deploy-commands.ts --outdir=build --platform=node --format=esm --target=node22 --bundle --packages=external --out-extension:.js=.mjs --minify",
-    "build:docker": "npm run build && docker build -t beatnik-dev .",
-    "build:dockerx64": "npm run build && docker buildx build --platform linux/amd64 -t beatnik-dev-x64 .",
-    "dev": "tsx watch src/beatnik.ts",
+    "build": "node build.mjs",
+    "build:docker": "npm run build && docker build -t nickseman/beatnik:next .",
     "commands": "tsx src/deploy-commands.ts",
-    "format": "prettier --write .",
-    "typecheck": "tsc --noEmit",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:migratedeploy": "prisma migrate deploy",
-    "start": "npm run db:migratedeploy && node ./build/deploy-commands.mjs && node ./build/beatnik.mjs"
+    "dev": "tsx watch src/beatnik.ts",
+    "format": "prettier --write .",
+    "preinstall": "npx only-allow npm",
+    "push:docker": "docker push -t nickseman/beatnik:next",
+    "start": "npm run db:migratedeploy && node ./build/deploy-commands.mjs && node ./build/beatnik.mjs",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@discordjs/opus": "^0.10.0",
@@ -34,10 +34,10 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^22.15.17",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
     "esbuild": "^0.25.4",
-    "eslint": "^8.57.0",
+    "eslint": "^9.27.0",
     "eslint-plugin-require-extensions": "^0.1.3",
     "prettier": "^3.3.2",
     "prisma": "^6.8.2",
