--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-require-extensions": "^0.1.3",
     "prettier": "^3.3.2",
     "prisma": "^6.8.2",
+    "rimraf": "^6.0.1",
     "tsx": "^4.15.6",
     "typescript": "^5.5.2"
   },
