--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "format": "prettier --write .",
     "preinstall": "npx only-allow npm",
     "push:docker": "docker push -t nickseman/beatnik:next",
-    "start": "npm run db:migratedeploy && node ./build/deploy-commands.mjs && node ./build/beatnik.mjs",
+    "start": "npm run db:migratedeploy && node ./build/deploy-commands.cjs && node ./build/beatnik.cjs",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
