--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
   "type": "module",
   "scripts": {
     "build": "node build.mjs",
-    "build:docker": "npm run build && docker build -t nickseman/beatnik:next .",
     "commands": "tsx src/deploy-commands.ts",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:migratedeploy": "npx prisma migrate deploy",
     "dev": "tsx watch src/beatnik.ts",
+    "docker:build": "npm run build && docker build -t nickseman/beatnik:next .",
+    "docker:push": "docker push nickseman/beatnik:next",
+    "docker:up": "docker compose -f 'docker-compose.dev.yml' up",
     "format": "prettier --write .",
     "preinstall": "npx only-allow npm",
-    "push:docker": "docker push nickseman/beatnik:next",
     "start": "npm run db:migratedeploy && node ./build/deploy-commands.cjs && node ./build/beatnik.cjs",
     "typecheck": "tsc --noEmit"
   },
