--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,5 +5,8 @@ services:
     volumes:
       - "./docker/library.db:/library.db"
       - "./docker/library:/library"
-    env_file: ".env"
+    env_file: .env
+    environment:
+      - LIBRARY_PATH=/library
+      - DATABASE_URL=file:/library.db
     restart: no
