--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "db:migrate": "prisma migrate dev",
     "db:deploy": "npx prisma migrate deploy",
     "dev": "tsx watch src/beatnik.ts",
-    "docker:build": "npm run build && docker build --platform linux/amd64,linux/arm64 -t nickseman/beatnik:next .",
+    "docker:build": "npm run build && docker build --platform linux/amd64 -t nickseman/beatnik:next .",
     "docker:push": "docker push nickseman/beatnik:next",
-    "docker:up": "docker compose -f 'docker-compose.dev.yml' up",
-    "docker:upx86": "DOCKER_DEFAULT_PLATFORM=linux/amd64 npm run docker:up",
+    "docker:up": "DOCKER_DEFAULT_PLATFORM=linux/amd64 docker compose -f 'docker-compose.dev.yml' up",
     "format": "prettier --write .",
     "preinstall": "npx only-allow npm",
-    "release:build": "npm run build && docker build --platform linux/amd64,linux/arm64 -t nickseman/beatnik:latest .",
+    "release:build": "npm run build && docker build --platform linux/amd64 -t nickseman/beatnik:latest .",
     "release:push": "docker push nickseman/beatnik:latest",
     "start": "npm run db:deploy && node ./build/deploy-commands.cjs && node ./build/beatnik.cjs",
     "typecheck": "tsc --noEmit"
@@ -27,14 +26,18 @@
     "@discordjs/opus": "^0.10.0",
     "@discordjs/voice": "^0.18.0",
     "@prisma/client": "^6.8.2",
+    "bgutils-js": "^3.2.0",
     "discord.js": "^14.20.0",
     "dotenv": "^16.4.5",
+    "jsdom": "^26.1.0",
+    "node-libcurl-ja3": "^5.0.3",
     "sodium-native": "^5.0.6",
     "sqlite3": "^5.1.7",
     "youtubei.js": "^15.0.1"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.15.17",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
