--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beatnik",
-  "version": "4.1.4",
+  "version": "4.2.0",
   "description": "modern and simple Discord music bot with easy-to-use commands",
   "author": "vphoebe",
   "license": "MIT",
@@ -12,10 +12,12 @@
     "db:migrate": "prisma migrate dev",
     "db:deploy": "npx prisma migrate deploy",
     "dev": "tsx watch src/beatnik.ts",
-    "docker:build": "npm run build && docker build --platform linux/amd64 -t nickseman/beatnik:next .",
-    "docker:push": "docker push nickseman/beatnik:next",
+    "docker:build": "npm run build && docker build --platform linux/amd64 -t nickseman/beatnik:dev .",
     "docker:up": "DOCKER_DEFAULT_PLATFORM=linux/amd64 docker compose -f 'docker-compose.dev.yml' up",
     "format": "prettier --write .",
+    "next:build": "npm run build && docker build --platform linux/amd64 -f Dockerfile.production -t nickseman/beatnik:next .",
+    "next:push": "docker push nickseman/beatnik:next",
+    "next:up": "DOCKER_DEFAULT_PLATFORM=linux/amd64 docker compose -f 'docker-compose.next.yml' up",
     "preinstall": "npx only-allow npm",
     "release:build": "npm run build && docker build --platform linux/amd64 -t nickseman/beatnik:latest .",
     "release:push": "docker push nickseman/beatnik:latest",
